src/test/deca/context/invalid/class/53-declMethodeRetourDiff1.deca
/* Description:
     teste la régle (2.6) Déclaration d'une méthode qui existe déja dans la class supérieur,
     mais qui n'a pas le meme type de retour
    Historique:
      cree le 22/01/2020
*/


class A {
  C methode(float a, float b){} // methode declarer pour la premiere fois ici
  }

class B extends A{
  B methode(float d, float e){} // erreur au niveau de type de retour de la methode B n'est pas un sous type de C
}

class C extends B {

}
